          a new method "sem" to get at the underlying semaphore object.
        - implement Coro::Channel in terms of Coro::Semaphore, for a moderate
          (in comparison) 20-40% speedup.
        - used new SLF interface to reimplement Coro::Signal gaining
          some unknown (because I was too lazy), but certain, speedup, and also
          making signals reliable for the first time.
        - sped up coroutine creation/destruction by 40%.
        - forgot to include Coro/libcoro/README in the dist for all these years.
        - work around a freebsd pthreads bug (manual testcancel is required as
          pthread_cond_wait isn't a cancellation point on freebsd).
        - use new rouse functions to speed up and simplify Coro::BDB.
        - make "prefer perl native functions" work with threaded perls.
        - condense Coro::Debug ps output, hint at v and w flags.
        - (libcoro) lots of minor cleanups and portability improvements.

4.913 Sat Nov 15 07:58:28 CET 2008
        - async_pool did free a scalar value twice
          ("Attempt to unreference...").

4.912 Thu Nov 13 18:31:23 CET 2008
	- minor cleanups.
        - use much larger stacks on linux and perl < 5.8.8.
        - Coro::Debug::new_unix_server did not unlink the socket
          when destroyed.

4.911 Tue Nov 11 04:26:17 CET 2008
	- "port" to threaded perls.

4.91 Mon Nov 10 05:36:38 CET 2008
        - the ->throw exception object no longer leaks.
        - creating a new cctx leaked a scopestack entry (memleak).
	- new coroutines didn't get created with a zero flags field
          (unknown impact).
	- calling ->throw on a not-yet-started coroutine should now work
          instead of being ignored.
        - ->throw is now supported on Coro::State objects.
        - clean up cctx creation code a bit.
        - entersub is actually a UNOP, not a LOGOP (not a bugfix).

4.9  Sat Nov  8 17:45:27 CET 2008
 	- (libcoro) did not preserve rbp with CORO_ASM (we are getting there).